Fix: Updated budget configuration with valid types

--- a/angular.json
+++ b/angular.json
@@ -65,7 +65,8 @@
                   "maximumError": "5mb"
                 },
                 {
-                  "type": "anyText",
+                  "type": "bundle",
+                  "name": "styles",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
                 }
