Fix: Updated style budgets and optimization for fonts

--- a/angular.json
+++ b/angular.json
@@ -67,11 +67,17 @@
                 {
                   "type": "bundle",
                   "name": "styles",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
+                  "maximumWarning": "20mb",
+                  "maximumError": "25mb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": {
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
+                }
+              }
             },
             "development": {
               "optimization": false,
