Fix: Updated build configuration for proper SSR

--- a/vercel.json
+++ b/vercel.json
@@ -7,12 +7,24 @@
       "config": {
         "distDir": "dist/file-api/browser"
       }
+    },
+    {
+      "src": "server.ts",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|woff|woff2|ttf|eot))",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/server.ts"
     }
   ]
 } 
