--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,12 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "src/assets/fonts",
+                "output": "/assets/fonts/"
+              }
             ],
             "styles": [
               "src/styles.css",
@@ -56,8 +61,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "4kb",
+                  "maximumError": "6kb"
                 },
                 {
                   "type": "anyScript",
@@ -71,9 +76,7 @@
                   "minify": true,
                   "inlineCritical": false
                 },
-                "fonts": {
-                  "inline": false
-                }
+                "fonts": false
               }
             },
             "development": {
