--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "vercel-build": "ng build --configuration production",
+    "vercel-build": "ng build && ng run file-api:server",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:file-api": "node dist/file-api/server/server.mjs"
