Fix: Simplified Vercel configuration for static deployment

--- a/vercel.json
+++ b/vercel.json
@@ -7,46 +7,12 @@
       "config": {
         "distDir": "dist/file-api/browser"
       }
-    },
-    {
-      "src": "server.ts",
-      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/assets/(.*)",
-      "dest": "/assets/$1",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/(.*\\.js)",
-      "dest": "/$1",
-      "headers": {
-        "content-type": "application/javascript",
-        "cache-control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/(.*\\.css)",
-      "dest": "/$1",
-      "headers": {
-        "content-type": "text/css",
-        "cache-control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/(.*\\.(woff2|woff|ttf|eot))",
-      "dest": "/$1",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
       "src": "/(.*)",
-      "dest": "/server.ts"
+      "dest": "/index.html"
     }
   ]
 } 
