--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/file-api",
+            "outputPath": "dist/file-api/browser",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -32,12 +32,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "**/*",
-                "input": "src/assets/fonts",
-                "output": "/assets/fonts/"
-              }
+              "src/assets"
             ],
             "styles": [
               "src/styles.css",
@@ -77,7 +72,8 @@
                   "inlineCritical": false
                 },
                 "fonts": false
-              }
+              },
+              "sourceMap": true
             },
             "development": {
               "optimization": false,
