--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,14 @@
       "handle": "filesystem"
     },
     {
+      "src": "/favicon.ico",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "/favicon.png",
+      "dest": "/favicon.png"
+    },
+    {
       "src": "/assets/(.*)",
       "dest": "/assets/$1"
     },
