--- a/vercel.json
+++ b/vercel.json
@@ -11,14 +11,6 @@
   ],
   "routes": [
     {
-      "src": "/favicon.ico",
-      "dest": "/favicon.ico"
-    },
-    {
-      "src": "/favicon.png",
-      "dest": "/favicon.png"
-    },
-    {
       "src": "/assets/(.*)",
       "dest": "/assets/$1"
     },
@@ -27,9 +19,11 @@
       "dest": "/$1"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/index.html",
-      "status": 200
+      "dest": "/index.html"
     }
   ]
 } 
